--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -5,21 +5,157 @@ output:
     keep_md: true
 ---
 
+## Intall Packages
+```{r,echo=FALSE}
+#library(data.table)
+packages <- c( "data.table","xtable","ggplot2","VIM")
+sapply(packages, require, character.only=TRUE, quietly=TRUE)
+```
 
 ## Loading and preprocessing the data
 
+Show any code that is needed to
+
+1. Load the data (i.e. read.csv())
+
+2. Process/transform the data (if necessary) into a format suitable for your analysis
+
+Read the CSV file. Convert the data frame to a data table using the data.table package
+
+```{r}
+setwd("~/R Programming/Course5")
+data <- read.csv(file.path(getwd(), "activity.csv"))
+data <- data.table(data)
+nrow(data)
+```
+
+
+
+Verify the number of rows loaded is correct.
+
+```{r}
+check <- nrow(data) == 17568
+
+if (check == FALSE) stop("The number of rows in the dataset is not 17,568.")
+```
+
+Convert the `date` variable to a date class.
+And look at the structure of the dataset.
+```{r}
+data <- data[, date := as.Date(date)]
+setkey(data, date, interval)
+str(data)
+```
 
 
 ## What is mean total number of steps taken per day?
+For this part of the assignment, you can ignore the missing values in
+ the dataset.
+ 
+ 1. Make a histogram of the total number of steps taken each day
+ 
+ 2. Calculate and report the **mean** and **median** total number of steps taken per day
 
+Aggregate the number of steps taken each day.
+Days with missing values (`NA`) will have `NA` when aggregated.
 
+Sum steps by day, create Histogram, and calculate mean and median.
+```{r} 
+steps_by_day <- aggregate(steps ~ date, data, sum)
+hist(steps_by_day$steps, main = paste("Total Steps Each Day"), col="blue", xlab="Number of Steps")
+rmean <- mean(steps_by_day$steps)
+rmedian <- median(steps_by_day$steps)
+```
 
 ## What is the average daily activity pattern?
 
+1. Make a time series plot (i.e. `type = "l"`) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
 
+2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+
+Aggregate the average number of steps taken by 5-minute interval.
+
+```{r}
+steps_by_interval <- aggregate(steps ~ interval, data, mean)
+
+plot(steps_by_interval$interval,steps_by_interval$steps, type="l", xlab="Interval", ylab="Number of Steps",main="Average Number of Steps per Day by Interval")
+
+max_interval <- steps_by_interval[which.max(steps_by_interval$steps),1]
+```
+
+The 5-minute interval, on average across all the days in the data set, containing the maximum number of steps is `r max_interval`.
 
 ## Imputing missing values
+ Note that there are a number of days/intervals where there are missing
+ values (coded as `NA`). The presence of missing days may introduce
+ bias into some calculations or summaries of the data.
+ 
+ 1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with `NA`s)
+ 
+ 2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+ 
+ 3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+ 
+ 4. Make a histogram of the total number of steps taken each day and Calculate and report the **mean** and **median** total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+
+```{r}
+incomplete <- sum(!complete.cases(data))
+imputed_data <- transform(data, steps = ifelse(is.na(data$steps), steps_by_interval$steps[match(data$interval, steps_by_interval$interval)], data$steps))
+```
+
+Zeroes were imputed for 10-01-2012 because it was the first day and would have been over 9,000 steps higher than the following day, which had only 126 steps. NAs then were assumed to be zeros to fit the rising trend of the data. 
+```{r}
+imputed_data[as.character(imputed_data$date) == "2012-10-01", 1] <- 0
+```
+
+Recount total steps by day and create Histogram. 
+```{r}
+steps_by_day_i <- aggregate(steps ~ date, imputed_data, sum)
+hist(steps_by_day_i$steps, main = paste("Total Steps Each Day"), col="blue", xlab="Number of Steps")
+
+#Create Histogram to show difference. 
+hist(steps_by_day$steps, main = paste("Total Steps Each Day"), col="red", xlab="Number of Steps", add=T)
+legend("topright", c("Imputed", "Non-imputed"), col=c("blue", "red"), lwd=10)
+```
+
+Calculate new mean and median for imputed data. 
+```{r}
+rmean.i <- mean(steps_by_day_i$steps)
+rmedian.i <- median(steps_by_day_i$steps)
+```
+
+Calculate difference between imputed and non-imputed data.
+```{r}
+mean_diff <- rmean.i - rmean
+med_diff <- rmedian.i - rmedian
+```
+
+Calculate total difference.
+```{r}
+total_diff <- sum(steps_by_day_i$steps) - sum(steps_by_day$steps)
+```
+* The imputed data mean is `r rmean.i`
+* The imputed data median is `r rmedian.i`
+* The difference between the non-imputed mean and imputed mean is `r mean_diff`
+* The difference between the non-imputed mean and imputed mean is `r med_diff`
+* The difference between total number of steps between imputed and non-imputed data is `r total_diff`. Thus, there were `r total_diff` more steps in the imputed data.
+
 
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
+Created a plot to compare and contrast number of steps between the week and weekend. There is a higher peak earlier on weekdays, and more overall activity on weekends.  
+``` {r}
+weekdays <- c("Monday", "Tuesday", "Wednesday", "Thursday", 
+              "Friday")
+imputed_data$dow = as.factor(ifelse(is.element(weekdays(as.Date(imputed_data$date)),weekdays), "Weekday", "Weekend"))
+
+steps_by_interval_i <- aggregate(steps ~ interval + dow, imputed_data, mean)
+
+library(lattice)
+
+xyplot(steps_by_interval_i$steps ~ steps_by_interval_i$interval|steps_by_interval_i$dow, main="Average Steps per Day by Interval",xlab="Interval", ylab="Steps",layout=c(1,2), type="l")
+
+```
+
+##end 
